external-crates/move/crates/move-compiler/tests/move_check/unit_test/multiple_errors@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:15:7
   │
15 │     #[test(_a=@0x1)]
   │       ^^^^^^^^^^^^^
   │       │
   │       Arguments are no longer supported in `#[test]` attributes
   │       Ignoring these arguments

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:16:5
   │
16 │     public fun a(_a: signer) { }
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid test function
   │
   = Test functions with arguments have been deprecated

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:19:7
   │
19 │     #[test(_a=Foo)]
   │       ^^^^^^^^^^^^
   │       │
   │       Arguments are no longer supported in `#[test]` attributes
   │       Ignoring these arguments

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:20:5
   │
20 │     public fun b(_a: signer) { }
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid test function
   │
   = Test functions with arguments have been deprecated

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:22:7
   │
22 │     #[test(_a=@0x1, _b=@0x2)]
   │       ^^^^^^^^^^^^^^^^^^^^^^
   │       │
   │       Arguments are no longer supported in `#[test]` attributes
   │       Ignoring these arguments

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:23:5
   │
23 │     public fun c(_a: signer, _b: signer) { }
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid test function
   │
   = Test functions with arguments have been deprecated

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:26:7
   │
26 │     #[test(_a=@0x1)]
   │       ^^^^^^^^^^^^^
   │       │
   │       Arguments are no longer supported in `#[test]` attributes
   │       Ignoring these arguments

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:27:7
   │
27 │     #[test(_b=@0x2)]
   │       ^^^^^^^^^^^^^
   │       │
   │       Arguments are no longer supported in `#[test]` attributes
   │       Ignoring these arguments

error[E10001]: invalid duplicate attribute
   ┌─ tests/move_check/unit_test/multiple_errors.move:27:7
   │
26 │     #[test(_a=@0x1)]
   │       ------------- Attribute previously given here
27 │     #[test(_b=@0x2)]
   │       ^^^^^^^^^^^^^ Duplicate attribute 'test' attached to the same item

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:28:5
   │
28 │     public fun d(_a: signer, _b: signer) { }
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid test function
   │
   = Test functions with arguments have been deprecated

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:31:7
   │
31 │     #[test(_a=@0x1)]
   │       ^^^^^^^^^^^^^
   │       │
   │       Arguments are no longer supported in `#[test]` attributes
   │       Ignoring these arguments

error[E10004]: invalid usage of known attribute
   ┌─ tests/move_check/unit_test/multiple_errors.move:32:7
   │
31 │     #[test(_a=@0x1)]
   │       ------------- Previously annotated here
32 │     #[test_only]
   │       ^^^^^^^^^ function annotated as both #[test_only] and #[test]. You need to declare it as either one or the other

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:33:5
   │
33 │     public fun e(_a: signer, _b: signer) { }
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid test function
   │
   = Test functions with arguments have been deprecated

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:36:7
   │
36 │     #[test(_a=@0x1)]
   │       ^^^^^^^^^^^^^
   │       │
   │       Arguments are no longer supported in `#[test]` attributes
   │       Ignoring these arguments

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:37:5
   │
37 │     public fun f(_a: signer, _b: signer) { }
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid test function
   │
   = Test functions with arguments have been deprecated

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:40:7
   │
40 │     #[test(_a=@0x1)]
   │       ^^^^^^^^^^^^^
   │       │
   │       Arguments are no longer supported in `#[test]` attributes
   │       Ignoring these arguments

error[E10001]: invalid duplicate attribute
   ┌─ tests/move_check/unit_test/multiple_errors.move:42:7
   │
41 │     #[expected_failure]
   │       ---------------- Attribute previously given here
42 │     #[expected_failure]
   │       ^^^^^^^^^^^^^^^^ Duplicate attribute 'expected_failure' attached to the same item

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:43:5
   │
43 │     public fun g(_a: signer, _b: signer) { }
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid test function
   │
   = Test functions with arguments have been deprecated
